class Location:
    """  """
    def __init__(self, location_id, country, city):
        """  """
        self.location_id : int = location_id
        self.country : str = country
        self.city : str = city

    