@startuml Image-Sorter_Final_Model

' --- ENTITY CLASSES (Data) ---

class ImageTimestamp {
  +timestamp : date
}

class ImagePath {
  +path : str
}

class ImageGPS {
  +latitude : tuple
  +longitude : tuple
}

class Location {
  +location_id : int <<PK>>
  +country : str
  +city : str
}

class ImageMetadata {
  -image_id : int <<PK>>
  --
  +set_metadata()
}

' --- SERVICE CLASSES (Logic) ---

class GeocoderService {
  +get_location(coords : ImageGPS) : Location
}

class ImageOrganizer {
  +organize_by_location()
  +sort_by_timestamp()
  +update_path()
}

' --- RELATIONSHIPS ---

' Composition: ImageMetadata owns the essential, dependent data.
ImageMetadata "1" *-- "1" ImageTimestamp
ImageMetadata "1" *-- "1" ImagePath
ImageMetadata "1" *-- "1" ImageGPS
ImageMetadata "1" *-- "1" Location

' Dependency CORRECTION: ImageMetadata's logic requires the Geocoder service.
' The Location entity is passive and should not call the service.
ImageMetadata ..> GeocoderService : uses for Location

' Aggregation: The organizer manages a collection of metadata objects.
ImageOrganizer "1" o--> "*" ImageMetadata : manages

@enduml